--- a/visualUpdate/navbar-lab.css
+++ b/visualUpdate/navbar-lab.css
@@ -2,9 +2,9 @@
   /*selection*/
   --color-brand-01:#00884b;
   /*Navbar background*/
-  --color-brand-02:#b0bef3;
+  --color-brand-02:#b0berr;
   /*Hover accent color*/
-  --color-brand-03:#fe8500;
+  --color-brand-03:#fe8560;
   /*Nav height*/
   --nav-height:60px;
   /*Nav font-size*/
